--- a/styles/figmaweek4copy.css
+++ b/styles/figmaweek4copy.css
@@ -1,10 +1,9 @@
 .body {
     background: #E5E5E5;
-}
-
-.body {
     font-family: 'Roboto', serif;
     font-style: normal;
+    padding: 0;
+    margin: 0;
 }
 
 .header {
