--- a/styles/week5_responsive.css
+++ b/styles/week5_responsive.css
@@ -1,8 +1,9 @@
 .body {
-    min-height: 100vh;
-    text-align: center;
+    max-width: 100%;
     padding: 0;
-margin: 0;
+    margin: 0;
+    text-align: center;
+    font-size: 1em; 
 }
 
 .header,
@@ -16,21 +17,18 @@ margin: 0;
     padding: 10px;
 }
 
-
 .sectionflex {
-
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     height: 50vh;
     width: 60vw;
-    justify-content: center;
     background-color: rgba(243, 234, 222, 0.758);
 }
 
 .flexp {
     width: 45%;
     margin: 10px;
-    width: 45%;
     background-color: rgb(242, 213, 182);
 }
 
@@ -43,8 +41,6 @@ margin: 0;
 .flexh2 {
     justify-content: center;
     width: 80%;
-
-
 }
 
 .asideflex {
@@ -52,7 +48,7 @@ margin: 0;
     width: 40%;
     height: 50vh;
     right: 0;
-    top: 12.5vh;
+    top: 12.4vh;
     background-color: rgb(222, 253, 235);
 }
 
@@ -65,11 +61,9 @@ margin: 0;
 }
 
 a {
-
-    background-color: aliceblue;
     width: 23%;
     height: 15vh;
     flex-grow: 0;
     padding-top: 14px;
-
+    background-color: aliceblue;
 }
