--- a/styles/week6_layout1.css
+++ b/styles/week6_layout1.css
@@ -1,7 +1,7 @@
 .container {
     display: grid;
-    grid-template-columns: repeat(2, 30%) 1fr;
-    grid-template-rows: 100px 80% 200px;
+    grid-template-columns: repeat(2, 35%) 1fr;
+    grid-template-rows: 10% 80% 10%;
     grid-template-areas:
         "header header header"
         "main main aside"
@@ -9,7 +9,26 @@
     background-image: url(../assets/yamahar1.jpeg);
     background-size: cover;
     font-family: 'Quicksand', sans-serif;
+    width: 100%;
+    margin: 0%;
+    padding: 0%;
 }
+@media screen and (max-width: 1023px) {
+    .container {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        font-size: 1.3em;
+        margin: 0%; 
+        padding: 0%;
+    }
+    }
+
+@media screen and (max-width: 767px) {
+        .container {
+            font-size: 0.5em;
+        }
+        }
 
 .header {
     background: rgb(18, 18, 19);
@@ -21,14 +40,8 @@
     align-items: stretch;
 }
 
-.pagename, .header_a, .aside, .footer_a, .formsubmit {
+.header_a, .aside, .footer_a, .formsubmit {
     color: aliceblue;
-}
-
-.pagename {
-    position: absolute;
-    left: 70%;
-    top: 35%;
 }
 
 .header_a {
@@ -36,6 +49,22 @@
     text-align: center;
     padding-top: 50px;
 }
+
+@media screen and (max-width: 1023px) {
+    .header_a {
+        width: 25%;
+        height: 15vh;
+    }
+    }
+
+@media screen and (max-width: 767px) {
+    .header_a {
+        width: 20%;
+        height: 5vh;
+        text-align: center;
+        justify-content: center; 
+    }
+    }
 
 .header_a:hover {
         background-color: rgb(0, 0, 0);
@@ -49,11 +78,22 @@
 .main {
     display: grid;
     grid-template-columns: repeat(2, 50%);
-    align-items: end;
+    justify-content: center;
+    align-items: stretch;
     grid-area: main;
-    grid-gap: 10px;
+    grid-gap: 1%; 
+    width: 100%;
+    margin-left: 2%;
 }
 
+@media screen and (max-width: 1023px) {
+.main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+}
+    
 .section1,
 .section2,
 .section3 {
@@ -63,15 +103,58 @@
     margin-left: 12px;
     margin-bottom: 12px;
     margin-top: 12px;
+    margin-right: 12px;
     text-align: justify;
     line-height: 1.5;
     padding-left: 5px;
     padding-right: 5px;
 }
 
+@media screen and (min-width: 1024px) {
+    .section1, .section2, .section3 {
+        width: 80%;
+        margin-left: 5%;
+        margin-bottom: 0%;
+        margin-top: 5%;
+        margin-right: 5%;
+        align-self: center;
+        text-align: justify;
+        line-height: 1.2;
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+    }
+
+    @media screen and (max-width: 1023px) {
+        .section1, .section2, .section3 {
+            width: 55vw;
+            align-self: flex-start;
+            margin-left: 2%;
+            margin-bottom: 0%;
+            margin-top: 17px;
+            margin-right: 0%;
+            text-align: justify;
+            line-height: 1.2;
+            padding-left: 10%;
+            padding-right: 10%;
+        }
+        }
+
 .section3 {
-    grid-column: span 3;
+    grid-column: 1/4;
 }
+@media screen and (min-width: 1024px) {
+    .section3 {
+        width: 80%;
+        margin-left: 3%;
+        margin-bottom: 10%;
+        margin-top: 3%;
+        margin-right: 5%;
+        align-self: center;
+        text-align: justify;
+        line-height: 1.2;
+    }
+    }
 
 .button {
     color: blue;
@@ -90,18 +173,24 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 15px;
-    margin-left: 24px;
+    width: 100%;
+    height: 100%;
+}
+
+@media screen and (max-width: 1023px) {
+    .aside {
+        display: none;
+    }
 }
 
 .div {
-    width: 350px;
-    height: 50px;
-    line-break: 15em;
-    color: rgb(158, 158, 245);
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    height: 5vh;
+    text-align: center;
+    color: rgb(158, 158, 245);
+    margin-bottom: 15px;   
 }
 
 .footer {
@@ -110,6 +199,7 @@
     grid-area: footer;
     display: flex;
     align-items: end;
+    height: 20vh;
 }
 
 .footer_a {
@@ -117,6 +207,21 @@
     height: 50%;
     text-align: center;
 }
+
+@media screen and (min-width: 1024px) {
+    .footer_a {
+        width: 25%;
+        height: 15vh;
+    }
+    }
+
+@media screen and (max-width: 1023px) {
+    .footer_a {
+        width: 20%;
+        height: 5vh;
+        text-align: center;
+    }
+    }
 
 .footer_a:hover {
     background-color: rgb(0, 0, 0);
@@ -128,7 +233,8 @@
 }
 
 .formsubmit {
-    background-color: blue;
+    background-color: rgb(8, 8, 251, 0.3);
     border: rgb(110, 94, 187) solid 2px;
     border-radius: 12px;
 }
+ 
