--- a/styles/week8_firstpage.css
+++ b/styles/week8_firstpage.css
@@ -10,8 +10,9 @@
     font-family: Roboto Slab, sans-serif;
     background: rgb(117,200,201);
 background: linear-gradient(0deg, rgba(117,200,201,1) 0%, rgba(151,166,255,1) 100%);
+height: 100vh;
 }
-
+ 
 .header {
     grid-area: header;
 }
@@ -33,7 +34,7 @@ h1 {
     font-weight: 600;
 }
 
-h4 {
+.header__name {
     font-weight: 600;
     padding-left: 3em;
     padding-top: 0.4em;
@@ -41,19 +42,24 @@ h4 {
 
 .btn {
     width: 9em;
-    height: 3em;
+    height: 3em; 
     background-color: rgb(81, 15, 153);
     border-radius: 22px;
     font-weight: 600;
 }
 
-.container__basket {
+.container {
     position: absolute;
     display: flex;
-    justify-content: end;
-
+    height: 10vh;
 }
 
 .container__logo {
     position: absolute;
+    
 }
+.container__basket {
+    padding-left: 75vw;
+
+}
+
